--- a/vs2015/MultipleLights/MultipleLights.vcxproj
+++ b/vs2015/MultipleLights/MultipleLights.vcxproj
@@ -19,8 +19,8 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{F90B6569-4BE5-408B-AED9-1013A04F0F48}</ProjectGuid>
-    <RootNamespace>LightCasters</RootNamespace>
+    <ProjectGuid>{6D6895BD-1769-4AFF-A845-E850A58D2527}</ProjectGuid>
+    <RootNamespace>MultipleLights</RootNamespace>
     <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -122,11 +122,11 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\..\src\glad.c" />
-    <ClCompile Include="..\..\src\LightCasters\main.cpp" />
+    <ClCompile Include="..\..\src\MultipleLights\main.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\..\src\LightCasters\light_caster.fs" />
-    <None Include="..\..\src\LightCasters\light_caster.vs" />
+    <None Include="..\..\src\MultipleLights\multiple_lights.fs" />
+    <None Include="..\..\src\MultipleLights\multiple_lights.vs" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
